# ai-vscode-debug

./: .env.example  .gitignore  .mcp.json  AGENTS.md  EDGE_CASE_TEST_REPORT.md  ISSUES_SPECIFICATIONS.md  QWEN.md  README.md
playground/: CMakeLists.txt  Makefile  README.md  debug_scenarios.md  main.c  main_mt.cpp  test_ai_debug_all.sh
playground/app/: SWC_ButtonHandler.c  SWC_ButtonHandler.h  SWC_Communication.c  SWC_Communication.h  SWC_Dashboard.c  SWC_Dashboard.h  SWC_Diagnostic.c  SWC_Diagnostic.h  SWC_LightControl.c  SWC_LightControl.h  SWC_MotorControl.c  SWC_MotorControl.h  SWC_TempMonitor.c  SWC_TempMonitor.h
playground/ecual/: IoHwAb.c  IoHwAb.h  IoHwAb_Adc.c  IoHwAb_Adc.h  IoHwAb_Dio.c  IoHwAb_Dio.h  IoHwAb_Pwm.c  IoHwAb_Pwm.h
playground/mcal/: Adc.c  Adc.h  Adc_Cfg.h  Dio.c  Dio.h  Dio_Cfg.h  Fls.c  Fls.h  Fls_Cfg.h  Gpt.c  Gpt.h  Gpt_Cfg.h  Icu.c  Icu.h  Icu_Cfg.h  Mcu.c  Mcu.h  Mcu_Cfg.h  Port.c  Port.h  Port_Cfg.h  Pwm.c  Pwm.h  Pwm_Cfg.h  Spi.c  Spi.h  Spi_Cfg.h  Uart.c  Uart.h  Uart_Cfg.h  Wdg.c  Wdg.h  Wdg_Cfg.h
playground/platform/: Compiler.h  Compiler_Cfg.h  Platform_Types.h  Std_Types.h
playground/rte/: Rte.c  Rte.h  Rte_SWC_ButtonHandler.h  Rte_SWC_Dashboard.h  Rte_SWC_LightControl.h  Rte_SWC_MotorControl.h  Rte_SWC_TempMonitor.h  Rte_Type.h
playground/services/: BswM.c  BswM.h  CanIf.c  CanIf.h  Com.c  Com.h  ComM.c  ComM.h  Dem.c  Dem.h  Det.c  Det.h  EcuM.c  EcuM.h  NvM.c  NvM.h  Os.c  Os.h  Os_Cfg.h  SchM.c  SchM.h
playground/utils/: Utils_BitOps.c  Utils_BitOps.h  Utils_Crc.c  Utils_Crc.h  Utils_Filter.c  Utils_Filter.h  (+2 more)
(+251 files in other folders)
